feat: finish task

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <ol>
         <li><a href="CSS_especificity_explained/exercise_1.html">exercise_1</a></li>
     </ol>
-    <li>changing the font family digital ocean</li>
+    <li>changing the font family digital </li>
     <ol>
         <li><a href="changing_the_font_family_digital/exercise_1.html">exercise_1</a></li>
     </ol>
